.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:14:22 **** Incremental Build of configuration Debug for project clist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'destroy':
..\main.c:20:21: error: expected ')' before 'stu'
  printf("11 %d,%s\n"stu->age,stu->name);
                     ^
..\main.c:20:21: warning: format '%d' expects a matching 'int' argument [-Wformat=]
..\main.c:20:21: warning: format '%s' expects a matching 'char *' argument [-Wformat=]
..\main.c:22:21: error: expected ')' before 'stu'
  printf("22 %d,%s\n"stu->age,stu->name);
                     ^
..\main.c:22:21: warning: format '%d' expects a matching 'int' argument [-Wformat=]
..\main.c:22:21: warning: format '%s' expects a matching 'char *' argument [-Wformat=]
..\main.c:24:21: error: expected ')' before 'stu'
  printf("33 %d,%s\n"stu->age,stu->name);
                     ^
..\main.c:24:21: warning: format '%d' expects a matching 'int' argument [-Wformat=]
..\main.c:24:21: warning: format '%s' expects a matching 'char *' argument [-Wformat=]
..\main.c: In function 'main':
..\main.c:55:10: warning: unused variable 'result' [-Wunused-variable]
     Stu *result = (Stu*)(clist_head(list)->data);
          ^
23:14:55 **** Incremental Build of configuration Debug for project clist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:55:10: warning: unused variable 'result' [-Wunused-variable]
     Stu *result = (Stu*)(clist_head(list)->data);
          ^
gcc -o clist.exe CList.o main.o 
23:17:31 **** Incremental Build of configuration Debug for project clist ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:52:10: warning: unused variable 'result' [-Wunused-variable]
     Stu *result = (Stu*)(clist_head(list)->data);
          ^
gcc -o clist.exe CList.o main.o 
